<resources>
    <string name="app_name">Cats Vs Dogs</string>
    <string name="start">Start</string>
    <string name="first_player">First player</string>
    <string name="second_name">Second player</string>
    <string name="first_name">First player</string>
    <string name="finish_fragment_title">Winner</string>
    <string name="finish_fragment_history">Leader Board</string>
    <string name="finish_fragment_start">Play again</string>
    <string name="finish_fragment_winner_name">Winner Name</string>
    <string name="finish_fragment_winner_score">Winner Score</string>
    <string name="finish_fragment_winner_draw">Draw</string>
    <string name="finish_fragment_winner_scope">Scope</string>
    <string name="click">Click</string>
    <string name="enter_players">Enter Players</string>
    <string name="player_one">Player One:</string>
    <string name="player_two">Player Two</string>
    <string name="catsvsdogs">CatsVSDogs</string>
</resources>
