<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".FinishFragment">

    <TextView
        android:id="@+id/titleFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/finish_fragment_title"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winnerNameFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/finish_fragment_winner_name"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/titleFinish"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/winnerScoreFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/finish_fragment_winner_score"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/winnerNameFinish"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/historyFinish"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="401dp"
        android:text="@string/finish_fragment_history"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winnerScoreFinish" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startAgainFinish"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/finish_fragment_start"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winnerScoreFinish" />

</androidx.constraintlayout.widget.ConstraintLayout>